# lib/api-spec/openapi.yaml
@@ -766,7 +766,17 @@ components:
           type: string
         wilaya:
           type: string
-      required: [nomLivraison, telephone, adresse, wilaya]
+        items:
+          type: array
+          items:
+            type: object
+            properties:
+              produitId:
+                type: integer
+              quantite:
+                type: integer
+            required: [produitId, quantite]
+      required: [nomLivraison, telephone, adresse, wilaya, items]
 
     Commande:
       type: object
